ts: verify endpoint
